# covid-analysis

./: pyproject.toml
covid_analysis/: analise_tcc.ipynb  app.py  cdk.json  dados.parquet  dados_drs.parquet  dados_municipio.parquet
covid_analysis/infrastructure/: infrastructure_stack.py
covid_analysis/infrastructure/resources/: resources.py
covid_analysis/src/cloud_infrastructure/raw_to_stage/: raw_to_stage.py
covid_analysis/src/streamlit/: athena_select.py  dados_drs.parquet  dados_municipio.parquet  streamlit.py
